<resources>
    <string name="app_name">To Do\'s</string>
    <string name="tsk_nam">Nombre de la tarea</string>
    <string name="date">Fecha</string>
    <string name="tsk_des">Descripción</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_ok">Aceptar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="task">Tarea</string>
    <string name="val_tsk">Verifica los datos ingresados</string>
    <string name="already_exist">Ya exisye una tarea con ese nombre</string>
    <string name="try_update">Deseas actualizarla?</string>
    <string name="invalid_date">Formato de fecha inválido</string>
    <string name="title_activity_nv_main">nv_main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="edt_usr">Editar Usuario</string>
    <string name="clo_ses">Cerrar Sesión</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="log">Ingresar</string>
    <string name="check_data">Revisa los datos ingresados</string>
    <string name="check_usr_pass">Datos incorrectos</string>
</resources>
